# TirePressure-Kata

./: .gitignore  README.md
cpp/: CMakeLists.txt
cpp/src/: CMakeLists.txt  alarm.cpp  alarm.h  sensor.cpp  sensor.h
cpp/test-catch2/: sample_catch.cpp
cpp/test-doctest/: sample_doctest.cpp
cpp/test-gtest/: CMakeLists.txt  sample_gtest.cpp
csharp/: TirePressure.sln
csharp/TirePressure/: Alarm.cs  AlarmTest.cs  Sensor.cs  TirePressure.csproj
go/: alarm.go  alarm_test.go  go.mod  sensor.go
java/: .gitignore  build.gradle  pom.xml  settings.gradle
java/src/main/java/org/example/: Alarm.java  Sensor.java
java/src/test/java/org/example/: AlarmTest.java
kotlin/: .gitignore  build.gradle  build.gradle.kts  settings.gradle
kotlin/src/main/kotlin/org/example/: Alarm.kt  Sensor.kt
kotlin/src/test/kotlin/org/example/: AlarmTest.kt
php/: .gitignore  composer.json  phpunit.xml.dist
php/tests/TirePressureMonitoring/: AlarmTest.php
python/tests/: test_tire_pressure_monitoring.py
swift/TirePressure/: Package.swift
swift/TirePressure/Sources/TirePressure/: Alarm.swift
swift/TirePressure/Tests/TirePressureTests/: TirePressureTests.swift
typescript/: .eslintrc.js  package-lock.json  package.json  tsconfig.json
typescript/src/: Alarm.test.ts  Alarm.ts  Sensor.ts
